--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,21 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.surmon"
+        applicationId "com.blogapp"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file(BLOG_PROJECT_RELEASE_STORE_FILE)
+            storePassword BLOG_PROJECT_RELEASE_STORE_PASSWORD
+            keyAlias BLOG_PROJECT_RELEASE_KEY_ALIAS
+            keyPassword BLOG_PROJECT_RELEASE_KEY_PASSWORD
         }
     }
     splits {
@@ -127,8 +135,6 @@ android {
 
 dependencies {
     compile project(':react-native-vector-icons')
-    compile project(':react-native-google-analytics-bridge')
-    compile project(':react-native-device-info')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
