--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "marked": "^0.3.6",
     "react": "15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
-    "react-native": "^0.42.0",
+    "react-native": "0.40.0",
     "react-native-device-info": "^0.10.1",
-    "react-native-google-analytics-bridge": "^5.0.0",
     "react-native-htmlview": "^0.8.0",
     "react-native-root-toast": "^1.0.5",
     "react-native-router-flux": "^3.37.0",
