--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,7 @@ import com.android.build.OutputFile
  */
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -98,10 +99,10 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file(BLOG_PROJECT_RELEASE_STORE_FILE)
-            storePassword BLOG_PROJECT_RELEASE_STORE_PASSWORD
-            keyAlias BLOG_PROJECT_RELEASE_KEY_ALIAS
-            keyPassword BLOG_PROJECT_RELEASE_KEY_PASSWORD
+            // storeFile file(BLOG_PROJECT_RELEASE_STORE_FILE)
+            // storePassword BLOG_PROJECT_RELEASE_STORE_PASSWORD
+            // keyAlias BLOG_PROJECT_RELEASE_KEY_ALIAS
+            // keyPassword BLOG_PROJECT_RELEASE_KEY_PASSWORD
         }
     }
     splits {
