--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-addons-shallow-compare": "^15.4.2",
     "react-native": "0.40.0",
     "react-native-device-info": "^0.10.1",
+    "react-native-gifted-listview": "git+https://github.com/FaridSafi/react-native-gifted-listview.git",
+    "react-native-gifted-spinner": "^0.1.0",
     "react-native-htmlview": "^0.8.0",
     "react-native-root-toast": "^1.0.5",
     "react-native-router-flux": "^3.37.0",
@@ -27,7 +29,6 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-jest": "19.0.0",
-    "babel-plugin-module-resolver": "^2.7.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
     "react-native-debugger-open": "^0.3.3",
