--- a/package.json
+++ b/package.json
@@ -12,18 +12,11 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
-    "marked": "^0.3.6",
     "react": "15.4.2",
-    "react-addons-shallow-compare": "^15.4.2",
     "react-native": "0.40.0",
-    "react-native-device-info": "^0.10.1",
     "react-native-gifted-listview": "git+https://github.com/FaridSafi/react-native-gifted-listview.git",
-    "react-native-gifted-spinner": "^0.1.0",
-    "react-native-htmlview": "^0.8.0",
     "react-native-root-toast": "^1.0.5",
-    "react-native-router-flux": "^3.37.0",
-    "react-native-side-menu": "^0.20.1",
-    "react-native-tab-view": "0.0.57",
+    "react-native-simple-markdown": "^1.0.60-rc.3",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
