--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,10 +99,10 @@ android {
     }
     signingConfigs {
         release {
-            // storeFile file(BLOG_PROJECT_RELEASE_STORE_FILE)
-            // storePassword BLOG_PROJECT_RELEASE_STORE_PASSWORD
-            // keyAlias BLOG_PROJECT_RELEASE_KEY_ALIAS
-            // keyPassword BLOG_PROJECT_RELEASE_KEY_PASSWORD
+            storeFile file(MYAPP_RELEASE_STORE_FILE)
+            storePassword MYAPP_RELEASE_STORE_PASSWORD
+            keyAlias MYAPP_RELEASE_KEY_ALIAS
+            keyPassword MYAPP_RELEASE_KEY_PASSWORD
         }
     }
     splits {
@@ -117,6 +117,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
