--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
-    "react": "15.4.2",
-    "react-native": "0.40.0",
+    "react": "^16.0.0",
+    "react-native": "^0.50.0",
     "react-native-gifted-listview": "git+https://github.com/FaridSafi/react-native-gifted-listview.git",
-    "react-native-root-toast": "^1.0.5",
+    "react-native-root-toast": "^2.0.0",
     "react-native-simple-markdown": "^1.0.60-rc.3",
-    "react-native-vector-icons": "^4.0.0"
+    "react-native-vector-icons": "^4.4.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
