home and setting module done

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,9 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-webview')
     implementation project(':react-native-vector-icons')
+    implementation project(':react-native-i18n')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
