--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "rnpm": {
     "assets": [
-      "./assets/fonts/"
+      "./src/assets/fonts/"
     ]
   },
   "scripts": {
@@ -21,6 +21,7 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
+    "autobind-decorator": "^2.4.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "query-string": "^6.2.0",
@@ -31,6 +32,7 @@
     "react-native-root-toast": "^3.0.2",
     "react-native-simple-markdown": "^1.0.60-rc.3",
     "react-native-vector-icons": "^6.2.0",
+    "react-native-webview": "^5.2.1",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
