--- a/package.json
+++ b/package.json
@@ -24,22 +24,27 @@
   },
   "dependencies": {
     "autobind-decorator": "^2.4.0",
+    "highlight.js": "^9.15.6",
+    "marked": "^0.6.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-native": "^0.58.4",
+    "react-native-autoheight-webview": "^1.0.1",
     "react-native-gesture-handler": "^1.0.16",
     "react-native-gifted-listview": "git+https://github.com/FaridSafi/react-native-gifted-listview.git",
+    "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-root-toast": "^3.0.2",
-    "react-native-simple-markdown": "^1.0.60-rc.3",
     "react-native-vector-icons": "^6.2.0",
     "react-native-webview": "^5.2.1",
     "react-navigation": "^3.3.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@types/highlight.js": "^9.12.3",
     "@types/jest": "^23.3.13",
+    "@types/marked": "^0.6.1",
     "@types/query-string": "^6.2.0",
     "@types/react": "^16.7.21",
     "@types/react-native": "^0.57.32",
