markdown component down

--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-native": "^0.58.4",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-autoheight-webview": "^1.0.1",
     "react-native-gesture-handler": "^1.0.16",
-    "react-native-gifted-listview": "git+https://github.com/FaridSafi/react-native-gifted-listview.git",
     "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-root-toast": "^3.0.2",
     "react-native-vector-icons": "^6.2.0",
