Develop comment module

--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   },
   "dependencies": {
     "autobind-decorator": "^2.4.0",
+    "gravatar": "^1.8.0",
     "highlight.js": "^9.15.6",
     "marked": "^0.6.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "query-string": "^6.2.0",
     "react": "^16.7.0",
-    "react-native": "^0.58.4",
+    "react-native": "^0.59.5",
     "react-native-actionsheet": "^2.4.2",
     "react-native-autoheight-webview": "^1.0.1",
     "react-native-gesture-handler": "^1.0.16",
@@ -42,23 +43,23 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@types/gravatar": "^1.8.0",
     "@types/highlight.js": "^9.12.3",
-    "@types/jest": "^23.3.13",
+    "@types/jest": "^24.0.11",
     "@types/marked": "^0.6.1",
-    "@types/query-string": "^6.2.0",
     "@types/react": "^16.7.21",
     "@types/react-native": "^0.57.32",
-    "@types/react-native-vector-icons": "^4.6.4",
+    "@types/react-native-vector-icons": "^6.4.0",
     "@types/react-navigation": "^3.0.1",
     "@types/react-test-renderer": "^16.0.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "24.0.0",
+    "babel-jest": "24.7.1",
     "babel-preset-react-native": "4.0.1",
-    "jest": "24.0.0",
-    "metro-react-native-babel-preset": "0.51.1",
+    "jest": "24.7.1",
+    "metro-react-native-babel-preset": "0.53.1",
     "react-native-debugger-open": "^0.3.3",
-    "react-native-typescript-transformer": "^1.2.11",
-    "react-test-renderer": "16.7.0",
+    "react-native-typescript-transformer": "^1.2.12",
+    "react-test-renderer": "16.8.6",
     "typescript": "^3.3.3333"
   },
   "jest": {
