--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "surmon.me.native",
+  "name": "surmon_me",
   "description": "App for Surmon.me blog",
   "version": "1.0.0",
   "private": false,
