--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-gesture-handler": "^1.2.0",
     "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-root-toast": "^3.0.2",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.4.2",
     "react-native-webview": "^5.8.1",
     "react-navigation": "^3.9.1"
