--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+// subprojects {
+// project.configurations.all {
+//     resolutionStrategy.eachDependency { details ->
+//         if (details.requested.group == 'com.android.support'
+//                 && !details.requested.name.contains('multidex') ) {
+//             details.useVersion "28.0.0"
+//         }
+//     }
+// }
+// afterEvaluate {
+//     android {
+//         compileSdkVersion 28
+//         buildToolsVersion "28.0.0"
+
+//         defaultConfig {
+//             targetSdkVersion 28
+//         }
+//     }
+// }}
+
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
