--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MYAPP_RELEASE_STORE_FILE=app-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=surmon-app
+MYAPP_RELEASE_STORE_PASSWORD=surmon
+MYAPP_RELEASE_KEY_PASSWORD=surmon
