--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "surmon@foxmail.com",
     "url": "https://surmon.me"
   },
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/surmon-china/surmon.me.native/issues"
   },
