--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Surmon",
     "email": "surmon@foxmail.com",
-    "url": "https://surmon.me"
+    "url": "https://github.com/surmon-china"
   },
   "license": "MIT",
   "bugs": {
@@ -39,12 +39,12 @@
     "postinstall": "rndebugger-open"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.3.3",
+    "@react-native-community/async-storage": "^1.5.1",
     "autobind-decorator": "^2.4.0",
     "gravatar": "^1.8.0",
     "highlight.js": "^9.15.6",
-    "marked": "^0.6.2",
-    "mobx": "^5.9.4",
+    "marked": "0.6.3",
+    "mobx": "^5.13.0",
     "mobx-react": "^5.4.3",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
@@ -52,12 +52,12 @@
     "react-native-actionsheet": "^2.4.2",
     "react-native-autoheight-webview": "^1.1.2",
     "react-native-gesture-handler": "^1.2.0",
-    "react-native-image-zoom-viewer": "^2.2.25",
-    "react-native-root-toast": "^3.0.2",
+    "react-native-image-zoom-viewer": "^2.2.26",
+    "react-native-root-toast": "^3.1.2",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-vector-icons": "^6.4.2",
-    "react-native-webview": "^5.8.1",
-    "react-navigation": "^3.9.1"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^5.12.1",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
