--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,9 @@
 #
 .DS_Store
 
-# vscode
-.vscode/
-
 # Xcode
 #
 build/
-/ios/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -22,7 +18,7 @@ xcuserdata
 *.moved-aside
 DerivedData
 *.hmap
-# *.ipa
+*.ipa
 *.xcuserstate
 project.xcworkspace
 
@@ -34,12 +30,15 @@ build/
 local.properties
 *.iml
 
+# Visual Studio Code
+#
+.vscode/
+
 # node.js
 #
 node_modules/
 npm-debug.log
 yarn-error.log
-# dist
 
 # BUCK
 buck-out/
@@ -51,8 +50,14 @@ buck-out/
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
+
+# CocoaPods
+/ios/Pods/
