Improve IOS done

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,8 @@ target 'surmon_me' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'surmon_meTests' do
     inherit! :search_paths
     # Pods for testing
