--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,14 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": ["es6"],
+    "lib": [
+      "dom",
+      "scripthost",
+      "es5",
+      "es6",
+      "es2016.array.include",
+      "es2015"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
