--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "surmon.me.native",
   "description": "App for Surmon.me blog",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "private": false,
   "author": {
     "name": "Surmon",
@@ -27,7 +27,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "build:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ./ios/main.jsbundle --assets-dest ./ios/bundle",
+    "postversion": "react-native-version",
     "build:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/main.jsbundle --assets-dest android/app/src/main/res/",
     "release:android": "cd android && ./gradlew assembleRelease"
   },
@@ -37,6 +37,7 @@
     "@react-navigation/bottom-tabs": "^5.0.7",
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.8",
+    "@sentry/react-native": "^1.3.3",
     "autobind-decorator": "^2.4.0",
     "gravatar": "^1.8.0",
     "highlight.js": "^9.18.1",
@@ -77,6 +78,7 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "16.9.0",
     "typescript": "^3.7.3"
   },
